User johns
Date Thu Nov 18 18:36:41 CET 2010

    Fixed: Ignore screen-saver-off, if already handled.

Date Tue Sep 21 22:53:41 CEST 2010

    Fixed bug: coretemp duplicate CPU entries fixed in newer kernel.

Date Tue Sep 21 14:56:59 CEST 2010

    Update to doxygen 1.7.1. Documentation corrections.

Date Fri Sep 17 23:32:10 CEST 2010

    Fixed bug: Second Temperature zone with two CPUs, shows debug 9999.

Date Fri Sep 17 14:28:03 CEST 2010

    Added support for hardware sensor thermal zones.

Date Tue Sep 14 15:09:32 CEST 2010

    Added man page.

Date Mon Aug 16 13:19:40 CEST 2010

    Removed background image from xpm, background is now dynamic generated.
    Support for commandline configured number of cores/cpus and thermal zones.
    Added start index, for more than one dockapp running.

Date Thu May 27 16:26:13 CEST 2010

    Added support to run on any X11 screen.

Date Fri May 21 12:49:31 CEST 2010

    Added doxygen documentation generation.
    Added support to sleep while screen-saver is running or video is blanked.
    Added support for command-line parsing.
    Window-mode and update rate are now command-line configurable.
    Removed old unused code. (Use the older sources for shared memory example)

Date Wed May 12 13:45:26 CEST 2010

    Renamed info files and Makefile cleanup.

Date Thu Apr 30 09:58:43 CEST 2009

    Removed shared pixmap.

Date Wed Apr 29 22:45:41 CEST 2009

    Rewritten, using xcb only.

Date Sat Apr 25 17:33:49 CEST 2009

    Initial version.

---