@@ -1,6 +1,6 @@
 @file README		@brief	coretemp/cpufreq monitor dockapp
 
-Copyright (c) 2004, 2009, 2010 by Lutz Sammer.  All Rights Reserved.
+Copyright (c) 2004, 2009 - 2011 by Lutz Sammer.  All Rights Reserved.
 
 Contributor(s):
 
@@ -45,5 +45,10 @@ Requires:
 	x11-libs/xcb-util
 		X C-language Bindings sample implementations
 		http://xcb.freedesktop.org/
+		Note: we are not compatible with versions before 0.3.8
+	x11-libs/xcb-util-wm
+		X C-language Bindings sample implementations
+		http://xcb.freedesktop.org/
+		Note: we are not compatible with versions before 0.3.8
 
 Lutz Sammer johns98@gmx.net
